--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@ocap/client": "^1.18.128",
     "@ocap/mcrypto": "^1.18.128",
     "@ocap/wallet": "^1.18.128",
-    "axios": "^1.7.2",
+    "antd": "^5.20.1",
+    "axios": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
