--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
+    "eslint-plugin-react": "^7.35.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "multer": "1.4.5-lts.1",
@@ -57,6 +58,8 @@
   "devDependencies": {
     "@arcblock/eslint-config": "^0.3.2",
     "@blocklet/js-sdk": "^1.16.29",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitejs/plugin-react": "^4.3.1",
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
@@ -70,6 +73,8 @@
     "react-router-dom": "^6.24.0",
     "rimraf": "^5.0.7",
     "simple-git-hooks": "^2.11.1",
+    "tslint": "^6.1.3",
+    "typescript": "^5.5.4",
     "vite": "^5.4.1",
     "vite-plugin-blocklet": "^0.9.1",
     "vite-plugin-svgr": "^4.2.0",
