--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "prepare": "npx simple-git-hooks",
     "bump-version": "zx --quiet scripts/bump-version.mjs"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{mjs,js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint"
+      "eslint",
+      "eslint --fix",
+      "git add"
     ],
     "*.{css,less,scss,json,graphql}": [
       "prettier --write"
@@ -64,7 +71,8 @@
     "bumpp": "^9.4.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
-    "lint-staged": "^15.2.7",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
